--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
                 <li><a href="/">Kontakt</a></li>
               </ul>
             </div>
-              </div>
-            <div id="navigation" class="menu menu-link">
-                <ul class="topnav" id="myTopnav">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">O Nas</a></li>
-                  <li><a href="/">Oferta</a></li>
-                  <li><a href="/">Referencje</a></li>
-                  <li><a href="/">Pomoc zdalna</a></li>
-                  <li><a href="/">Kontakt</a></li>
-                </ul>
-            </div>
+          </div>
+          <div id="navigation" class="menu menu-link">
+            <ul class="topnav" id="myTopnav">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">O Nas</a></li>
+              <li><a href="/">Oferta</a></li>
+              <li><a href="/">Referencje</a></li>
+              <li><a href="/">Pomoc zdalna</a></li>
+              <li><a href="/">Kontakt</a></li>
+            </ul>
+          </div>
         </div>
       </header>
 
@@ -196,8 +196,7 @@
             </h2>
           </div>
           <div class="under-text"> Sprawdź wybrane opinie na temat naszej pracy </div>
-          <div class="row row-50 justify-content-center justify-content-lg-between" style=" width: 95%;
-    margin: 0 auto;">
+          <div class="row row-50 justify-content-center justify-content-lg-between" style=" width: 95%; margin: 0 auto;">
             <div class="col-lg-3 col-md-6">
               <div class=" parent" onclick="">
                 <div class="child bg-one" id="portfolio">
